[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/DeathScene.gd" type="Script" id=1]

[node name="DeathScene" type="Control"]
margin_right = 319.0
margin_bottom = 179.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.141176, 0.12549, 0.12549, 0.513726 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 131.0
margin_top = 52.0
margin_right = 188.0
margin_bottom = 126.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 57.0
margin_bottom = 14.0
text = "You Died"
align = 1
valign = 1

[node name="RetryBtn" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 57.0
margin_bottom = 44.0
focus_neighbour_top = NodePath("../QuitBtn")
text = "Retry"

[node name="QuitBtn" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 57.0
margin_bottom = 74.0
focus_neighbour_bottom = NodePath("../RetryBtn")
text = "Quit"

[connection signal="pressed" from="CenterContainer/VBoxContainer/RetryBtn" to="." method="_on_RetryBtn_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitBtn" to="." method="_on_QuitBtn_pressed"]
